--- a/campus.html
+++ b/campus.html
@@ -46,7 +46,7 @@
 <div class="campus-container">
     <div class="item">
         <h1 class="campus-overskrift">Campus</h1>
-        <p class="campus-innleding">Lorem ipsum dolor sit amet, 
+        <p class="campus-innledning">Lorem ipsum dolor sit amet, 
         consectetur adipiscing elit, sed do
         eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Tortor consequat id porta nibh venenatis
@@ -56,19 +56,16 @@
         consectetur adipiscing elit, sed do
         eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Tortor consequat id porta nibh venenatis
-        cras.Tempus urna et pharetra pharetra massa massa ultricies. 
-        Vestibulum morbi blandit cursus risus at
-        ultrices mi tempus. Tortor consequat id porta nibh venenatis
-        cras.Tempus urna et pharetra pharetra massa massa ultricies. 
+        cras.Tempus urna et pharetra pharetra massa massa ultricies.
         </p>
     </div>
     <!---->
-    <img class="campus-img" src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35"/>
+    <img src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35"/>
 
 </div>
 <hr>
-<h2 class="campus-avsnitt-tittel">Studentfasiliteter på p35</h2>
-<p class="campus-avsnitt"> Troin quis libero nec urna rutrum molestie. Sed a purus ac est volutpat tincidunt. 
+<h2 class="første-avsnitt-tittel">Studentfasiliteter på p35</h2>
+<p class="første-avsnitt"> Troin quis libero nec urna rutrum molestie. Sed a purus ac est volutpat tincidunt. 
         Quisque gravida vitae nunc ac volutpat. Vivamus et nisl sed nunc viverra euismod. Phasellus ultrices, quam ut 
         porttitor semper, ipsum ipsum pellentesque est, id dictum urna felis et enim. Nunc posuere est lobortis cursus mattis. 
         Vivamus ligula nibh, imperdiet sed tristique in, sagittis id mauris. Fusce consectetur quis nulla a dignissim. Etiam eu
@@ -96,109 +93,109 @@
              eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </li>
             <li>Tortor consequat id porta nibh venenatis
-            cras.
+            cras. Nam pretium eget nulla sed suscipit. Ut fermentum quis sapien ut molestie.
             </li>
-            <li>Vestibulum morbi blandit cursus risus at
+            <li>Vestibulum morbi blandit cursus risus at etiam sagittis, mi elementum dapibus lobortis, 
+                metus dolor congue tellus, ac congue ante lectus id risus.
             </li>
         </ul>
     </div>
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
     <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
-        <img src="./images/stille_lesesal.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="øvrebilde"/>
+        <img src="images/stille_lesesal.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="øvrebilde"/>
         <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fstudent.oslomet.no%2Fauditorier-undervisningsrom%2F-%2Fundervisningsrom
             %2Fcampus%2FPIL%2Fbygning%2FP35%2From%2FP35P35-PI339&psig=AOvVaw3oVY3dnygWXssISM0Bmh22&ust=1699698337710000&source=images&cd
             =vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCCju-buYIDFQAAAAAdAAAAABAE-->
-        <img src="./images/stille_lesesal_1.jpeg" alt="stille leserom på p35 i PI330" loading="lazy" class="øvrebilde"/>
+        <img src="images/stille_lesesal_1.jpeg" alt="stille leserom på p35 i PI330" loading="lazy" class="øvrebilde"/>
         <!--https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI330-->
-        <img src="./images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="nedrebilde"/>
+        <img src="images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="nedrebilde"/>
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI339-->
     </div>
  
     <div>
         <h3 class="område-overskrift">Studiesal</h3>
         <ul class="campus-fasiliteter">
-            <li>consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>Tortor consequat id porta nibh venenatis
-                cras.Tempus urna et pharetra pharetra massa massa ultricies.</li>
-            <li> Vestibulum morbi blandit cursus risus at
-                ultrices mi tempus.Lorem ipsum dolor sit amet, 
-                consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>Tortor consequat id porta nibh venenatis
-                cras.</li>
-            <li>Vestibulum morbi blandit cursus risus at.</li>
+            
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.   </li>
+            <li>Phasellus ultrices, 
+                quam non maximus auctor, tellus massa molestie justo, id consectetur ipsum magna ut erat. Duis sit amet 
+                ullamcorper nunc, eu porta urna. </li>
+            <li>Donec sed tempus dolor. Cras suscipit lacus non libero efficitur, nec commodo neque vestibulum.</li>
+            <li>In et elit 
+                vitae nunc rhoncus convallis at at lectus. Sed pellentesque, dolor a feugiat consectetur, odio lectus finibus 
+                arcu, sit amet suscipit orci quam et orci.</li>
+            <li>Cras tellus ante, dignissim vel pellentesque eu, commodo a orci. Integer nisi dolor, semper sit amet ultricies 
+                sit amet, facilisis quis nisl.
+            </li>
         </ul>   
     </div>
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
         <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
-        <img src="./images/studiesal_3.jpeg" alt="studiesal på p35 i PH451" loading="lazy" class="øvrebilde"/>
+        <img src="images/studiesal_3.jpeg" alt="studiesal på p35 i PH451" loading="lazy" class="øvrebilde"/>
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
-        <img src="./images/studiesal_1.jpeg" alt="et annet fra studiesal på p35 i PH451"loading="lazy" class="øvrebilde"/>
+        <img src="images/studiesal_1.jpeg" alt="et annet fra studiesal på p35 i PH451"loading="lazy" class="øvrebilde"/>
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
-        <img src="./images/studiesal_2.jpeg" alt="enda et bilde fra studiesal på p35 i PH451" loading="lazy" class="nedrebilde"/>
+        <img src="images/studiesal_2.jpeg" alt="enda et bilde fra studiesal på p35 i PH451" loading="lazy" class="nedrebilde"/>
     </div> 
 
     <div>
         <h3 class="område-overskrift">Seminarrom</h3>
         <ul class="campus-fasiliteter">
-            <li>consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>Tortor consequat id porta nibh venenatis
-                cras.Tempus urna et pharetra pharetra massa massa ultricies.</li>
-            <li> Vestibulum morbi blandit cursus risus at
-                ultrices mi tempus.Lorem ipsum dolor sit amet, 
-                consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>Tortor consequat id porta nibh venenatis
-                cras.</li>
-            <li>Vestibulum morbi blandit cursus risus at.</li>
+            <li>Proin cursus nisl at augue pharetra, eu tempus nulla dapibus.</li>
+            <li>Suspendisse mollis in risus in mattis. Duis eu sem vel massa sollicitudin ultrices. 
+                Curabitur vitae sapien quam.</li>
+            <li> Nullam ligula est, laoreet quis porta et, sollicitudin et ipsum. Etiam accumsan dignissim rutrum. 
+                Maecenas ut nisi eu mauris rutrum porttitor vel sed lectus. Nullam vitae nunc lectus. 
+                Fusce est tellus, blandit et mattis ut, tristique vehicula sapien. 
+            </li>
+            <li>Integer convallis nec orci eget cursus.</li>
+            <li>Proin pharetra placerat nisl, in ultricies orci condimentum at.</li>
         </ul>   
     </div>
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
         <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI747-->
-        <img src="./images/seminarrom.jpeg" alt="seminarrom på p35 i PI747" loading="lazy" class="øvrebilde"/>
+        <img src="images/seminarrom.jpeg" alt="seminarrom på p35 i PI747" loading="lazy" class="øvrebilde"/>
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI749-->
-        <img src="./images/seminarrom_1.jpeg" alt="seminarrom på p35 i PI749"loading="lazy" class="øvrebilde"/>
+        <img src="images/seminarrom_1.jpeg" alt="seminarrom på p35 i PI749"loading="lazy" class="øvrebilde"/>
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI752-->
-        <img src="./images/seminarrom_2.jpeg" alt="seminarrom på p35 i PI752" loading="lazy" class="nedrebilde"/>
+        <img src="images/seminarrom_2.jpeg" alt="seminarrom på p35 i PI752" loading="lazy" class="nedrebilde"/>
     </div>
     
     <div class>
         <h3 class="område-overskrift">Grupperom</h3>
         <ul class="campus-fasiliteter">
-            <li>consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>Tortor consequat id porta nibh venenatis
-                cras.Tempus urna et pharetra pharetra massa massa ultricies.</li>
-            <li> Vestibulum morbi blandit cursus risus at
-                ultrices mi tempus.Lorem ipsum dolor sit amet, 
-                consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-            <li>Tortor consequat id porta nibh venenatis
-                cras.</li>
-            <li>Vestibulum morbi blandit cursus risus at.</li>
+            <li>Aenean a consequat lacus. Vivamus sit amet efficitur diam, eget posuere turpis. 
+                Ut consectetur dui tortor, et gravida lorem feugiat at. Mauris vestibulum hendrerit auctor.</li>
+            <li>Maecenas scelerisque vulputate neque, eget bibendum massa lacinia vel. Sed posuere pharetra condimentum.</li>
+            <li> Nulla eu nisi ut est facilisis luctus. Aenean tincidunt felis quis metus ultricies tincidunt. 
+                Quisque sit amet urna non sapien convallis suscipit vehicula sed nisi.</li>
+            <li>In laoreet mi in dui ornare, non dignissim dui convallis.</li>
+            <li>Etiam placerat arcu nec nisi pretium, nec sollicitudin ipsum consequat. Ut at semper ligula.</li>
         </ul>   
     </div>
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
         <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PE238-->
-        <img src="./images/grupperom.jpeg" alt="grupperom på p35 i PE238" loading="lazy" class="øvrebilde"/>
+        <img src="images/grupperom.jpeg" alt="grupperom på p35 i PE238" loading="lazy" class="øvrebilde"/>
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI238-->
-        <img src="./images/grupperom_1.jpeg" alt="grupperom på p35 i PI238"loading="lazy" class="øvrebilde"/>
+        <img src="images/grupperom_1.jpeg" alt="grupperom på p35 i PI238"loading="lazy" class="øvrebilde"/>
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI234-->
-        <img src="./images/grupperom_2.jpeg" alt="grupperom på p35 PI234" loading="lazy" class="nedrebilde"/>
+        <img src="images/grupperom_2.jpeg" alt="grupperom på p35 PI234" loading="lazy" class="nedrebilde"/>
     </div>
 </div>
+<p class="siste-avsnitt"> Vivamus pretium tortor at sapien sagittis feugiat. Duis sodales, felis ut molestie porttitor, 
+    mauris tortor rutrum dui, consequat aliquet leo ante nec eros. Aliquam faucibus nisi quis massa varius lobortis. 
+    Sed luctus nisi eu maximus commodo. Integer accumsan ac augue eu aliquam. Donec nibh massa, porta commodo feugiat at, 
+    dapibus sit amet nibh. 
 <!--Lenke til oslomet siden om rommene på p35-->
 <p class="link-campus"> Vil du se på flere av våre fasiliteter på p35? 
-    <a href="https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35" target="_blank">
+    <a class="farge-link-campus" href="https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35" target="_blank">
        Klikk her</a></p>
 <!--FOOTER-->
 <footer class="footer">
