--- a/topical.html
+++ b/topical.html
@@ -118,7 +118,7 @@
                     social media, news, navigation, and entertainment such as
                     games and movies.
                     For more information visit
-                    <a href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/"
+                    <a class="link-topical" href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/"
                         target="_blank">Insiderintelligence.
                     </a>
                 </p>
@@ -138,7 +138,7 @@
                     hard to keep track of them and even harder noticing if you
                     accidentally pressed one.
                     Read this research paper for more information
-                    <a href="https://www.researchgate.net/publication/285675840_Inclusive_design_and_human_factors_Designing_mobile_phones_for_older_users"
+                    <a class="link-topical" href="https://www.researchgate.net/publication/285675840_Inclusive_design_and_human_factors_Designing_mobile_phones_for_older_users"
                         target="_blank">ResearchGate.
                     </a>
                 </p>
@@ -154,7 +154,7 @@
                     adjustments and voice commands. This makes the technology
                     more user friendly and more adaptable for everyone to use.
                     For more information visit
-                    <a href="https://universaldesign.ie/What-is-Universal-Design/Case-studies-and-examples/Examples/Mobile-phone/"
+                    <a class="link-topical" href="https://universaldesign.ie/What-is-Universal-Design/Case-studies-and-examples/Examples/Mobile-phone/"
                         target="_blank">universaldesign.
                     </a>
                 </p>
@@ -174,7 +174,7 @@
                     who cannot afford to make a mistake in production and in the
                     worst case could lead to bankruptcy.
                     For more information visit
-                    <a href="https://www.mckinsey.com/capabilities/mckinsey-design/how-we-help-clients/design-blog/accessible-design-means-better-design"
+                    <a class="link-topical" href="https://www.mckinsey.com/capabilities/mckinsey-design/how-we-help-clients/design-blog/accessible-design-means-better-design"
                         target="_blank">McKinsey&Company.
                     </a>
                 </p>
