--- a/topical.html
+++ b/topical.html
@@ -11,7 +11,7 @@
 </head>
 
 <!-- Todelt nav. På høyre siden er det navnet på siden-->
-<body>
+<body class="topical-body">
      <!-- Header og navigasjonsbar start -->
      <div class="index-header topical-head">
         <picture class="nav-logo">
