--- a/campus.html
+++ b/campus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus</title>
-    <link href="./css/stylesheet.css" rel="stylesheet" />
+    <link href="./css/stylesheet.css" rel="stylesheet" >
     <!--Lenke til fontawsome for å bruke sosial medier ikoner-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Lenker til fonter -->
@@ -19,7 +19,7 @@
    <div class="index-header">
     <picture class="nav-logo">
         <!-- Logo kilde: https://foto.oslomet.no/fotoweb/archives/5005-OsloMet-logo/Folder%2052/Logomedsignatur_gul_OsloMet-01.png.info -->
-        <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart"/>
+        <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart">
     </picture>
     <nav>
         <ul class="navigations">                                  
@@ -60,7 +60,7 @@
         </p>
     </div>
     <!---->
-    <img src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35"/>
+    <img src="./images/oslomet_p35.jpg" alt="Bildet av utsiden av p35">
 
 </div>
 <hr>
@@ -103,13 +103,13 @@
     <!--En grid for å lage en bilde kolasj.-->
     <div class="image-wrapper">
     <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
-        <img src="images/stille_lesesal.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="øvrebilde"/>
+        <img src="images/stille_lesesal.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="øvrebilde">
         <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fstudent.oslomet.no%2Fauditorier-undervisningsrom%2F-%2Fundervisningsrom
             %2Fcampus%2FPIL%2Fbygning%2FP35%2From%2FP35P35-PI339&psig=AOvVaw3oVY3dnygWXssISM0Bmh22&ust=1699698337710000&source=images&cd
             =vfe&opi=89978449&ved=0CBEQjRxqFwoTCMCCju-buYIDFQAAAAAdAAAAABAE-->
-        <img src="images/stille_lesesal_1.jpeg" alt="stille leserom på p35 i PI330" loading="lazy" class="øvrebilde"/>
+        <img src="images/stille_lesesal_1.jpeg" alt="stille leserom på p35 i PI330" loading="lazy" class="øvrebilde">
         <!--https://student.oslomet.no/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI330-->
-        <img src="images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="nedrebilde"/>
+        <img src="images/stille_lesesal_2.jpeg" alt="stille leserom på p35 i PI339" loading="lazy" class="nedrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI339-->
     </div>
  
@@ -134,11 +134,11 @@
     <div class="image-wrapper">
         <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
-        <img src="images/studiesal_3.jpeg" alt="studiesal på p35 i PH451" loading="lazy" class="øvrebilde"/>
+        <img src="images/studiesal_3.jpeg" alt="studiesal på p35 i PH451" loading="lazy" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
-        <img src="images/studiesal_1.jpeg" alt="et annet fra studiesal på p35 i PH451"loading="lazy" class="øvrebilde"/>
+        <img src="images/studiesal_1.jpeg" alt="et annet fra studiesal på p35 i PH451" loading="lazy" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PH451-->
-        <img src="images/studiesal_2.jpeg" alt="enda et bilde fra studiesal på p35 i PH451" loading="lazy" class="nedrebilde"/>
+        <img src="images/studiesal_2.jpeg" alt="enda et bilde fra studiesal på p35 i PH451" loading="lazy" class="nedrebilde">
     </div> 
 
     <div>
@@ -159,11 +159,11 @@
     <div class="image-wrapper">
         <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI747-->
-        <img src="images/seminarrom.jpeg" alt="seminarrom på p35 i PI747" loading="lazy" class="øvrebilde"/>
+        <img src="images/seminarrom.jpeg" alt="seminarrom på p35 i PI747" loading="lazy" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI749-->
-        <img src="images/seminarrom_1.jpeg" alt="seminarrom på p35 i PI749"loading="lazy" class="øvrebilde"/>
+        <img src="images/seminarrom_1.jpeg" alt="seminarrom på p35 i PI749" loading="lazy" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI752-->
-        <img src="images/seminarrom_2.jpeg" alt="seminarrom på p35 i PI752" loading="lazy" class="nedrebilde"/>
+        <img src="images/seminarrom_2.jpeg" alt="seminarrom på p35 i PI752" loading="lazy" class="nedrebilde">
     </div>
     
     <div class>
@@ -182,11 +182,11 @@
     <div class="image-wrapper">
         <!--loading="lazy" gjør at bilde blir aktivt når brukeren er i nærheten.-->
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PE238-->
-        <img src="images/grupperom.jpeg" alt="grupperom på p35 i PE238" loading="lazy" class="øvrebilde"/>
+        <img src="images/grupperom.jpeg" alt="grupperom på p35 i PE238" loading="lazy" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI238-->
-        <img src="images/grupperom_1.jpeg" alt="grupperom på p35 i PI238"loading="lazy" class="øvrebilde"/>
+        <img src="images/grupperom_1.jpeg" alt="grupperom på p35 i PI238" loading="lazy" class="øvrebilde">
         <!--https://student.oslomet.no/en/auditorier-undervisningsrom/-/undervisningsrom/campus/PIL/bygning/P35/rom/P35P35-PI234-->
-        <img src="images/grupperom_2.jpeg" alt="grupperom på p35 PI234" loading="lazy" class="nedrebilde"/>
+        <img src="images/grupperom_2.jpeg" alt="grupperom på p35 PI234" loading="lazy" class="nedrebilde">
     </div>
 </div>
 <p class="siste-avsnitt"> Vivamus pretium tortor at sapien sagittis feugiat. Duis sodales, felis ut molestie porttitor, 
@@ -204,28 +204,28 @@
             <a href="#" class="logo-footer">
                 <img class="nav-logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
             </a>
-            <ui class="sosiale-medier">
+            <ul class="sosiale-medier">
                 <li>
-                    <a class="sosiale-link" href="https://www.facebook.com/oslomet/" alt="Facebook">
+                    <a class="sosiale-link" href="https://www.facebook.com/oslomet/">
                         <i class="fab fa-facebook"></i> <!--Facebook-ikon -->
                     </a>
                 </li>
                 <li>
-                    <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb" alt="Instagram">
+                    <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb">
                         <i class="fab fa-instagram"></i><!-- Instagram-ikon -->
                     </a>
                 </li>
                 <li>
-                    <a class="sosiale-link" href="https://twitter.com/oslomet" alt="Twitter">
+                    <a class="sosiale-link" href="https://twitter.com/oslomet">
                         <i class="fab fa-twitter"></i> <!-- LinkedIn-ikon -->
                     </a>
                 </li>
                 <li>
-                    <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/" alt="LinkedIn">
+                    <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/">
                         <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
                     </a>
                 </li>
-            </ui>
+            </ul>
         </div>
         <div class="adresse-kolonne">
             <p class="adresse-tittel">Kontakt oss</p>
@@ -234,7 +234,7 @@
                     Pilestredet 35. Studenttorget
                 </p>
                 <p class="adresse-link">
-                    <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a><br />
+                    <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a>
                     <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
                 </p>
             </address>
