--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link href="./css/stylesheet.css" rel="stylesheet" />
+    <link href="./css/stylesheet.css" rel="stylesheet" >
     <!--Lenke til fontawsome for å bruke sosial medier ikoner-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Lenker til fonter -->
@@ -19,7 +19,7 @@
 <div class="index-header">
     <picture class="nav-logo">
         <!-- Logo kilde: https://foto.oslomet.no/fotoweb/archives/5005-OsloMet-logo/Folder%2052/Logomedsignatur_gul_OsloMet-01.png.info -->
-        <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart"/>
+        <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart">
     </picture>
     <nav>
         <ul class="navigations">                                  
@@ -47,7 +47,7 @@
         <!-- hovedbilde på index-siden -->
         <picture class="index-image"> 
             <!-- Foto: https://foto.oslomet.no/fotoweb/archives/5007-Arkitektur-ved-OsloMet/Folder%2052/P35.jpg.info -->
-            <img src="./images/P35-2400-1200.jpeg" alt="Fasadebilde fra P35 i Oslo. Bilde tatt av Benjamin A. Ward/OsloMet"/>
+            <img src="./images/P35-2400-1200.jpeg" alt="Fasadebilde fra P35 i Oslo. Bilde tatt av Benjamin A. Ward/OsloMet">
         </picture>
         <!-- hovedinnholdet på index-siden -->
         <div class="index-intro">
@@ -93,7 +93,7 @@
                 class="cover-articles">
                 </div>
                 <div class="articles-content" >
-                <a href="./campus.html"><h3>Oslomet Campus</a></h3>
+                <a href="./campus.html"><h3>Oslomet Campus</h3></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
@@ -132,29 +132,29 @@
                     <img class="nav-logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
                 </a>
 
-                <ui class="sosiale-medier">
+                <ul class="sosiale-medier">
                     <li>
-                        <a class="sosiale-link" href="https://www.facebook.com/oslomet/" alt="Facebook">
+                        <a class="sosiale-link" href="https://www.facebook.com/oslomet/" >
                             <i class="fab fa-facebook"></i> <!--Facebook-ikon -->
                         </a>
 
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb" alt="Instagram">
+                        <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb" >
                             <i class="fab fa-instagram"></i><!-- Instagram-ikon -->
                         </a>
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://twitter.com/oslomet" alt="Twitter">
+                        <a class="sosiale-link" href="https://twitter.com/oslomet" >
                             <i class="fab fa-twitter"></i> <!-- Twitter-ikon -->
                         </a>
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/" alt="LinkedIn">
+                        <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/" >
                             <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
                         </a>
                     </li>
-                </ui>
+                </ul>
             </div>
 
             <div class="adresse-kolonne">
@@ -164,7 +164,7 @@
                         Pilestredet 35. Studenttorget
                     </p>
                     <p class="adresse-link">
-                        <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a><br />
+                        <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a>
                         <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
                     </p>
                 </address>
