--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
     <div class="kart">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7999.0357476956015!2d10.7353733!3d59.919548!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416e7bfda9fef5%3A0x1999a7ebc1b332a3!2sOsloMet%20-%20Biblioteket%20P35!5e0!3m2!1sno!2sno!4v1699286388345!5m2!1sno!2sno"
-            alt="Kart" width="100%" height="100%" framborder="0" style="border:0;" allowfullscreen tabindex="0" loading="lazy"
+            title="myFrame"
+            width="100%" height="100%" framborder="0" style="border:0;" allowfullscreen tabindex="0" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </div>
