--- a/topical.html
+++ b/topical.html
@@ -136,23 +136,23 @@
 
                 <ul class="sosiale-medier">
                     <li>
-                        <a class="sosiale-link" href="https://www.facebook.com/oslomet/" >
+                        <a class="sosiale-link" href="https://www.facebook.com/oslomet/" aria-label="ikone til facebook">
                             <i class="fab fa-facebook"></i> <!--Facebook-ikon -->
                         </a>
 
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb">
+                        <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb" aria-label="ikone til instagram">
                             <i class="fab fa-instagram"></i><!-- Instagram-ikon -->
                         </a>
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://twitter.com/oslomet" >
+                        <a class="sosiale-link" href="https://twitter.com/oslomet" aria-label="ikone til twitter" >
                             <i class="fab fa-twitter"></i> <!-- Twitter-ikon -->
                         </a>
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/">
+                        <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/" aria-label="ikone til linkedin">
                             <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
                         </a>
                     </li>
@@ -177,13 +177,3 @@
 </body>
 
 </html>
-
-<!--
-    media query greia 
-    mobil visning 
-
-    Legge inn kilde på video og bilder
-    Slette bilder som ikke brukes 
-
-    Fikse nav slik at jeg kan trykke inn på campus siden og home
--->
