--- a/accessibility.html
+++ b/accessibility.html
@@ -93,15 +93,10 @@
          Hvordan vi har testet koden (21.11.2023)
          </h2>
     <p class="campus-intro">
-        vi
-    
-       
-       Måten vi validerte og sjekket koden vår, både HTML og CSS, var ved å bruke  <a href="https://validator.w3.org/">W3C validator,</a>
-        som er en kodevalidator, i
-        tilleg brukte vi "Web accesbility evalution tool" for å sjekke om siden vår var accesbility. 
-        "Web accesbility evalution tool" er et verktøy som forteller deg om siden kan brukes av alle 
-        eller ikke. Når vi bruke denne så fikk vi noe alerts. Et av alertsene som vi kunne se var at noen linker i footeren ikke gikk til noe steder. 
-        For å fikse dette bestemte vi å fjerne disse linkene her.
+        Vi fulgte en grundig validerings- og kodekontrollprosess for både HTML og CSS på nettsiden vår. For å sikre Tilgjengeligheten brukte vi <a href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>.
+        Dette verktøyet evaluerer om nettsiden vår er tilgjengelig for alle brukere.Under testingen ble det avdekket noen feil meldinger, dette kom av ikonene vi har på footeren.
+         testen viste at "linken ikke hadde tekst". For å løse dette probleme ved ålegge til beskrivende tekst til lenkene som inneholdt ikonene i footeren. Dette bidrar ikke bare rette opp
+         tilgjengelighetsfeilen, men det gir også bedre informasjon til brukere som bruker skjermlesere eller annet hjelpeteknologi.
     </p>
 </div>
     <img class="campus-img" src="images/valedering.png" alt="">
