--- a/topical.html
+++ b/topical.html
@@ -43,7 +43,16 @@
     Bruker <video> for at banneret med lyd og muligheten til å ta videoen foran osv. ikke kommer med. -->
         <video src="images/video.mp4" muted loop autoplay></video>
         <div class="topic-container">
-            <h1> Topical</h1>
+            <!-- Teksten på videoen-->
+            <h1 class="tekstvideo"> 
+                Universal design is an important approach that aims to create inclusive
+                and accessible products, environments, and services for a wide range of
+                individuals, regardless of their physical or cognitive abilities, to 
+                ensure equal opportunities and participation in society, by implementing
+                principles such as usability, flexibility, simplicity, and information availability, 
+                thus contributing to building a more inclusive and accessible society for all
+
+            </h1>
         </div>
     </div>
     <main class="section-topic">
@@ -80,7 +89,7 @@
                         </h2>
                         <p>Universal design is based on creating products that ensure
                             accessibility and usability for all people no matter their
-                            situation or state</p>
+                            situation or state.</p>
                     </div>
                 </div>
     
@@ -111,7 +120,7 @@
                         communicate with others and really depend on them to get
                         through everyday life. 
                         of the following topics:<br><br> a)  The smartphone is used to pay bills, or<br> b) Access personal files
-                    , and <br> c)  some people even rely on it to do
+                    , and <br> c) Some people even rely on it to do
                     their jobs. </p>
                
                 </div>
