--- a/topical.html
+++ b/topical.html
@@ -44,15 +44,11 @@
         <video src="images/video.mp4" muted loop autoplay></video>
         <div class="topic-container">
             <!-- Teksten på videoen-->
-            <h1 class="tekstvideo"> 
+            <p class="tekstvideo"> 
                 Universal design is an important approach that aims to create inclusive
                 and accessible products, environments, and services for a wide range of
-                individuals, regardless of their physical or cognitive abilities, to 
-                ensure equal opportunities and participation in society, by implementing
-                principles such as usability, flexibility, simplicity, and information availability, 
-                thus contributing to building a more inclusive and accessible society for all
-
-            </h1>
+                individuals, regardless of their physical or cognitive abilities
+            </p>
         </div>
     </div>
     <main class="section-topic">
