--- a/topical.html
+++ b/topical.html
@@ -47,7 +47,8 @@
             <p class="tekstvideo"> 
                 Universal design is an important approach that aims to create inclusive
                 and accessible products, environments, and services for a wide range of
-                individuals, regardless of their physical or cognitive abilities
+                individuals, regardless of their physical or cognitive abilitie
+
             </p>
         </div>
     </div>
