--- a/topical.html
+++ b/topical.html
@@ -77,8 +77,8 @@
                 <div class="smartphone-image">
                     <div>
                         <figure>
-            <!-- Foto: fra nettiden unsplash.com, Link til siden: https://unsplash.com/-->
-                            <img src="./images/pexels-pixabay-207456.jpg" alt="Phones with handset">
+                          <!-- Foto: fra nettiden pexels.com. Foto av pixabay. Link til siden: https://www.pexels.com/nb-no/bilde/macbook-bord-teknologi-ipad-356056/-->
+                          <img src="./images/pexels-pixabay-207456.jpg" alt="Phones with handset">
                     
                         </figure>
                         <h2 class="topical-h2">
@@ -92,6 +92,7 @@
     
                 <div class="smartphone-image">
                     <div>
+                        <!-- Foto: fra nettiden unsplash.com, Link til siden: https://unsplash.com/-->
                         <figure>
                             <img src="images/notatbok.jpg" alt="Picture of main">
                         </figure>
